# DSMT-Project

./: README.md  client.py  docker-compose.yml
cluster/: Dockerfile  README.md  docker-compose.yml  interact.py  rebar.config
cluster/config/: sys.config.src  vm.args.src
cluster/my_nif/: rebar.config
cluster/my_nif/native/my_nif/: Cargo.toml
cluster/my_nif/native/my_nif/rusqlite_async/: Cargo.toml
cluster/my_nif/native/my_nif/rusqlite_async/src/: connection.rs  lib.rs  main.rs
cluster/my_nif/native/my_nif/src/: lib.rs
cluster/my_nif/src/: cargo.hrl  my_nif.erl
cluster/src/: erlang_project.app.src  erlang_project.hrl  erlang_project_api.erl  erlang_project_app.erl  erlang_project_cow.erl  erlang_project_ra.erl  erlang_project_sup.erl
frontend/: Dockerfile  README.md  REQUESTS.md  bun.lockb  package.json  tsconfig.json  vite.config.ts
frontend/src/lib/: auth.ts  requests.ts  utils.ts
frontend/src/lib/components/: Accordion.svelte  Alert.svelte  MultiInput.svelte  NavLink.svelte  Prepared.svelte  Script.svelte  Selector.svelte  Tab.svelte  Table.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/signin/: +page.svelte
frontend/src/routes/signout/: +page.svelte
frontend/src/routes/signup/: +page.svelte
server/: Dockerfile
server/driver/: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
server/spring/: pom.xml
server/spring/src/main/resources/: application.properties
(+77 files in other folders)
